--- a/public/Testing-page-random.html
+++ b/public/Testing-page-random.html
@@ -95,7 +95,6 @@
         const resetButton = document.getElementById('resetButton');
         const scoreDisplay = document.getElementById('score');
 
-        let jumpSuccessCount = 0; // Count successful jumps to determine when to spawn second cactus
         let score = 0; // Score variable
         let isJumping = false; // Track if the T-Rex is currently jumping
         let gameOver = false; // Track if the game is over
@@ -120,14 +119,7 @@
 
                             // Check if jumped over the first cactus
                             if (didJumpOverCactus()) {
-                                updateScore(); // Update score whenever the player jumps over the cactus
-                                jumpSuccessCount++;
-
-                                // Check to create the second cactus after third jump over the first cactus
-                                if (jumpSuccessCount === 3) {
-                                    createSecondCactus(); // Create the second cactus
-                                    jumpSuccessCount = 0; // Reset jump success count
-                                }
+                                updateScore(); // Increment the score by 10
                             }
                         }
                     }, 20);
@@ -177,8 +169,6 @@
             }
         });
 
-        let secondCactus = null;
-
         function moveCactus() {
             if (gameOver) return;
 
@@ -186,46 +176,22 @@
                 let cactusPosition = parseInt(window.getComputedStyle(cactus).getPropertyValue("left"));
                 cactus.style.left = (cactusPosition - cactusSpeed) + 'px'; // Move cactus left
 
-                if (cactusPosition < -20) { // If the first cactus goes off screen
-                    cactus.style.left = '800px'; // Reset first cactus position
-                }
-
-                // Move the second cactus, if it exists
-                if (secondCactus) {
-                    let secondCactusPosition = parseInt(window.getComputedStyle(secondCactus).getPropertyValue("left"));
-                    secondCactus.style.left = (secondCactusPosition - cactusSpeed) + 'px'; // Move second cactus left
-
-                    if (secondCactusPosition < -20) { // If the second cactus goes off screen
-                        secondCactus.remove(); // Remove the cactus from DOM
-                        secondCactus = null; // Clear reference
-                    }
+                if (cactusPosition < -20) { // If the cactus goes off screen
+                    cactus.style.left = '800px'; // Reset cactus position
                 }
             }, 20);
         }
 
-        function createSecondCactus() {
-            if (secondCactus) return; // Prevent creation if already exists
-
-            secondCactus = document.createElement('div');
-            secondCactus.className = 'cactus'; // Apply the same styles as the first cactus
-            document.getElementById('gameCanvas').appendChild(secondCactus);
-
-            // Set the second cactus to be positioned right next to the first cactus
-            const cactusRect = cactus.getBoundingClientRect();
-            secondCactus.style.left = (cactusRect.right) + 'px'; // Position next to first cactus
-            secondCactus.style.bottom = '10px'; // Align with the ground
-        }
-
         moveCactus(); // Start the cactus movement
 
+        // Check for collisions
         setInterval(() => {
             if (gameOver) return;
 
             const trexRect = trex.getBoundingClientRect();
             const cactusRect = cactus.getBoundingClientRect();
-            let secondCactusRect = secondCactus ? secondCactus.getBoundingClientRect() : null;
 
-            // Check if T-Rex collides with the first cactus
+            // Check if T-Rex collides with the cactus
             if (
                 trexRect.left < cactusRect.right &&
                 trexRect.right > cactusRect.left &&
@@ -234,24 +200,13 @@
                 gameOver = true; // Set game over if collision happens
                 gameOverDiv.style.display = 'block'; // Show the game over message
             }
-
-            // Check if T-Rex collides with the second cactus
-            if (secondCactusRect && (
-                trexRect.left < secondCactusRect.right &&
-                trexRect.right > secondCactusRect.left &&
-                trexRect.bottom > secondCactusRect.top
-            )) {
-                gameOver = true; // Set game over if collision happens with second cactus
-                gameOverDiv.style.display = 'block'; // Show the game over message
-            }
         }, 50);
 
         resetButton.addEventListener('click', () => {
             location.reload(); // Reloads the page when the reset button is clicked
         });
 
-        // Make cactus movement continuous
-        moveCactus();
+        moveCactus(); // Start the cactus movement
     </script>
 </body>
 
