--- a/public/Testing-page-random.html
+++ b/public/Testing-page-random.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Square</title>
+    <title>Interactive 3D Cube</title>
     <style>
         body {
             display: flex;
@@ -19,7 +19,7 @@
             width: 100px;
             height: 100px;
             transform-style: preserve-3d;
-            animation: rotate 5s infinite linear;
+            transition: transform 0.1s;
         }
 
         .cube-face {
@@ -54,19 +54,10 @@
         .bottom {
             transform: rotateX(-90deg) translateZ(50px);
         }
-
-        @keyframes rotate {
-            from {
-                transform: rotateY(0);
-            }
-            to {
-                transform: rotateY(360deg);
-            }
-        }
     </style>
 </head>
 <body>
-    <div class="cube">
+    <div class="cube" id="cube">
         <div class="cube-face front"></div>
         <div class="cube-face back"></div>
         <div class="cube-face left"></div>
@@ -74,5 +65,26 @@
         <div class="cube-face top"></div>
         <div class="cube-face bottom"></div>
     </div>
+
+    <script>
+        const cube = document.getElementById('cube');
+        let mouseX = 0;
+        let mouseY = 0;
+        let rotationX = 0;
+        let rotationY = 0;
+
+        document.addEventListener('mousemove', (event) => {
+            // Get the mouse position in relation to the center of the cube
+            const centerX = window.innerWidth / 2;
+            const centerY = window.innerHeight / 2;
+
+            // Calculate rotation
+            rotationY = (event.clientX - centerX) / 10; // Adjust sensitivity
+            rotationX = (event.clientY - centerY) / 10; // Adjust sensitivity
+
+            // Apply rotation
+            cube.style.transform = `rotateY(${rotationY}deg) rotateX(${-rotationX}deg)`;
+        });
+    </script>
 </body>
 </html>
