--- a/public/t2a19-move-background-aden.html
+++ b/public/t2a19-move-background-aden.html
@@ -8,7 +8,7 @@
 
 <h1 align="center">t2a19-move-background-fred.html</h1>
 
-<input id="myButton01" type="button" value="background move left" onclick="{
+<input id="myButton01" type="button" value="Background Move Left" onclick="{
   myGlobalX -= 5;
   let myTemp = myGlobalX + 'px 0px';
   document.getElementById('myBody').style.backgroundPosition = myTemp;
@@ -44,5 +44,6 @@
   }, 30);
 }">
 
-<img id="myImage01" style="position: relative; width: 100px; height: 80px; top: 0px; left: 0px;" src="myImage01.jpg">
+<img id="myImage01" style="position: relative; width: 100px; height: 80px; top: 0px; left: 0px;" 
+src="https://i.ibb.co/Zf7hHsh/OIP.jpg" alt="OIP">
 </body>
